--- a/BreuerBPM/MainWindow.xaml
+++ b/BreuerBPM/MainWindow.xaml
@@ -7,8 +7,8 @@
         mc:Ignorable="d"
         Title="Weight Measurement" Height="744.8" Width="515">
     <Grid Margin="0,10,3.8,-52.8">
-        <TextBlock x:Name="AppTitle" HorizontalAlignment="Left" Margin="39,29,0,670" Text="Weight Measurement" TextWrapping="Wrap" Width="429" FontSize="32" TextAlignment="Center" Foreground="#FF4949A9"/>
-        <TextBlock x:Name="textBlock" HorizontalAlignment="Left" Margin="39,95,0,0" Text="Please stand briefly on scale to allow bluetooth connection" TextWrapping="Wrap" VerticalAlignment="Top" Width="415" FontSize="16" Height="30"/>
+        <TextBlock x:Name="AppTitle" HorizontalAlignment="Left" Margin="39,29,0,670" Text="Blood Pressure Measurement" TextWrapping="Wrap" Width="429" FontSize="32" TextAlignment="Center" Foreground="#FF4949A9"/>
+        <TextBlock x:Name="textBlock" HorizontalAlignment="Left" Margin="106,88,0,0" Text="Press 'M1' Button to establish a connection" TextWrapping="Wrap" VerticalAlignment="Top" Width="311" FontSize="16" Height="30"/>
         <TextBlock x:Name="textBlock1" HorizontalAlignment="Left" Margin="86,133,0,0" TextWrapping="Wrap" VerticalAlignment="Top" FontSize="18" Height="28" Width="164"><Run Text="Connection Status"/><Run Text=":"/><LineBreak/><Run/></TextBlock>
         <TextBlock x:Name="textBlock2" HorizontalAlignment="Left" Margin="69,208,0,0" TextWrapping="Wrap" VerticalAlignment="Top" FontSize="20" Width="164"><Run Text="1st Measurement"/><Run Text=":"/></TextBlock>
         <TextBlock x:Name="textBlock3" HorizontalAlignment="Left" Margin="69,291,0,0" TextWrapping="Wrap" VerticalAlignment="Top" FontSize="20"><Run Text="2nd Measurement"/><Run Text=":"/></TextBlock>
@@ -20,8 +20,8 @@
         <TextBlock x:Name="textBlock5" HorizontalAlignment="Left" Margin="73,452,0,0" TextWrapping="Wrap" VerticalAlignment="Top" FontSize="20" Visibility="Hidden"><Run Text="3rd Measurement"/><Run Text=":"/></TextBlock>
         <TextBlock x:Name="W3Measurement" HorizontalAlignment="Left" Margin="307,452,0,0" Text="-Empty-" TextWrapping="Wrap" VerticalAlignment="Top" FontSize="20" Visibility="Hidden"/>
         <Button x:Name="button1" Content="Done Measuring" Margin="185,519,155,0" VerticalAlignment="Top" FontSize="20" Click="button1_Click" Height="38" Visibility="Hidden"/>
-        <TextBlock x:Name="textBlock6" HorizontalAlignment="Left" Margin="396,212,0,0" TextWrapping="Wrap" VerticalAlignment="Top" FontSize="16" Text="kg" Width="31"/>
-        <TextBlock x:Name="textBlock6_Copy" HorizontalAlignment="Left" Margin="396,295,0,0" TextWrapping="Wrap" VerticalAlignment="Top" FontSize="16" Text="kg" Width="31"/>
+        <TextBlock x:Name="textBlock6" HorizontalAlignment="Left" Margin="396,212,0,0" TextWrapping="Wrap" VerticalAlignment="Top" FontSize="16" Text="unit" Width="31"/>
+        <TextBlock x:Name="textBlock6_Copy" HorizontalAlignment="Left" Margin="396,295,0,0" TextWrapping="Wrap" VerticalAlignment="Top" FontSize="16" Text="unit" Width="31"/>
         <TextBlock x:Name="textBlock6_Copy1" HorizontalAlignment="Left" Margin="396,456,0,0" TextWrapping="Wrap" VerticalAlignment="Top" FontSize="16" Text="kg" Visibility="Hidden" Width="31"/>
         <TextBox x:Name="W1Measurement_TextBox" HorizontalAlignment="Left" Height="29" Margin="276,206,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="102" FontSize="20" Visibility="Hidden" TextChanged="W1Measurement_TextBox_TextChanged"/>
         <TextBox x:Name="W2Measurement_TextBox" HorizontalAlignment="Left" Height="29" Margin="276,288,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="102" FontSize="20" Visibility="Hidden" TextChanged="W2Measurement_TextBox_TextChanged"/>
