Enforced delay, currently 10 seconds needs to be changed to a minute. Valuechanged event turned off during delay. Need to handle clear buttons appropriately with delay - disable everything but make sure the correct ones are enabled again when delay complete.

--- a/BreuerBPM/MainWindow.xaml
+++ b/BreuerBPM/MainWindow.xaml
@@ -13,7 +13,7 @@
         <TextBlock x:Name="textBlock2" HorizontalAlignment="Left" Margin="39,216,0,0" TextWrapping="Wrap" VerticalAlignment="Top" FontSize="20" Width="164"><Run Text="1st Measurement"/><Run Text=":"/></TextBlock>
         <TextBlock x:Name="textBlock3" HorizontalAlignment="Left" Margin="38,289,0,0" TextWrapping="Wrap" VerticalAlignment="Top" FontSize="20"><Run Text="2nd Measurement"/><Run Text=":"/></TextBlock>
         <Button x:Name="button" Content="Done Measuring" Margin="171,519,170,0" VerticalAlignment="Top" FontSize="20" Click="button_Click" Height="38"/>
-        <TextBlock x:Name="Connectionstatus" HorizontalAlignment="Left" Margin="222,129,0,0" TextWrapping="Wrap" VerticalAlignment="Top" FontSize="18" Width="260"><Run Text="Press 'M1' to con"/><Run Text="nect"/></TextBlock>
+        <TextBlock x:Name="Connectionstatus" HorizontalAlignment="Left" Margin="222,129,0,0" TextWrapping="Wrap" VerticalAlignment="Top" FontSize="18" Width="261" Foreground="#FF118DE5"><Run Text="Press 'M1' to con"/><Run Text="nect"/></TextBlock>
         <CheckBox x:Name="checkBox" Content="Manual Measurement" HorizontalAlignment="Left" Margin="39,177,0,0" VerticalAlignment="Top" FontSize="14" Height="22" Width="168" Checked="checkBox_Checked" Unchecked="checkBox_Unchecked"/>
         <TextBlock x:Name="SYS_label" HorizontalAlignment="Left" Margin="246,177,0,0" TextWrapping="Wrap" Text="SYS" VerticalAlignment="Top" FontWeight="Bold"/>
         <TextBlock x:Name="DIA_Label" HorizontalAlignment="Left" Margin="315,177,0,0" TextWrapping="Wrap" Text="DIA" VerticalAlignment="Top" FontWeight="Bold"/>
@@ -31,5 +31,9 @@
         <Button x:Name="clear1" Content="X" HorizontalAlignment="Left" Margin="445,219,0,0" VerticalAlignment="Top" Width="23" FontSize="20" FontFamily="Lucida Console" Background="White" Foreground="#FFDD1B1B" BorderBrush="#FF0B0B0B" Click="clear1_Click"/>
         <Button x:Name="clear2" Content="X" HorizontalAlignment="Left" Margin="445,292,0,0" VerticalAlignment="Top" Width="23" FontSize="20" FontFamily="Lucida Console" Background="White" Foreground="#FFDD1B1B" BorderBrush="#FF0B0B0B" Click="clear2_Click"/>
         <Button x:Name="clear3" Content="X" HorizontalAlignment="Left" Margin="445,374,0,0" VerticalAlignment="Top" Width="23" FontSize="20" FontFamily="Lucida Console" Background="White" Foreground="#FFDD1B1B" BorderBrush="#FF0B0B0B" Click="clear3_Click"/>
+        <Button x:Name="ClearAll" Content="Clear All Measurements" HorizontalAlignment="Left" Margin="171,581,0,0" VerticalAlignment="Top" Width="155" Height="28" Click="ClearAll_Click"/>
+        <TextBlock x:Name="NextMeasurementIn" HorizontalAlignment="Left" Margin="171,439,0,0" TextWrapping="Wrap" Text="Next Measurement in: " VerticalAlignment="Top" Width="145"  FontSize="14"/>
+        <TextBlock x:Name="CounterLabel" HorizontalAlignment="Left" Margin="313,433,0,0" TextWrapping="Wrap" Text="70" VerticalAlignment="Top"  FontSize="20" RenderTransformOrigin="-0.751,0.519" Foreground="#FF118DE5"/>
+        <TextBlock x:Name="MinuteDelayPrompt" HorizontalAlignment="Left" Margin="39,462,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="444" Height="50" TextAlignment="Center"><Run Text="Please wait 1 minute before doing the next measurement."/><Run Text=" Bluetooth values will not come through until the minute is over."/></TextBlock>
     </Grid>
 </Window>
