--- a/BreuerBPM/MainWindow.xaml
+++ b/BreuerBPM/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:BreuerBPM"
         mc:Ignorable="d"
-        Title="Blood Pressure Measurement" Height="744.8" Width="515">
+        Title="Blood Pressure Measurement" Height="744.8" Width="530">
     <Grid Margin="0,10,3.8,-52.8">
         <TextBlock x:Name="AppTitle" HorizontalAlignment="Left" Margin="39,29,0,670" Text="Blood Pressure Measurement" TextWrapping="Wrap" Width="429" FontSize="32" TextAlignment="Center" Foreground="#FF4949A9"/>
         <TextBlock x:Name="textBlock" HorizontalAlignment="Left" Margin="106,88,0,0" Text="Press 'M1' Button to establish a connection" TextWrapping="Wrap" VerticalAlignment="Top" Width="311" FontSize="16" Height="30"/>
@@ -31,7 +31,7 @@
         <Button x:Name="clear1" Content="X" HorizontalAlignment="Left" Margin="434,219,0,0" VerticalAlignment="Top" Width="23" FontSize="20" FontFamily="Lucida Console" Background="White" Foreground="#FFDD1B1B" BorderBrush="#FF0B0B0B" Click="clear1_Click"/>
         <Button x:Name="clear2" Content="X" HorizontalAlignment="Left" Margin="434,292,0,0" VerticalAlignment="Top" Width="23" FontSize="20" FontFamily="Lucida Console" Background="White" Foreground="#FFDD1B1B" BorderBrush="#FF0B0B0B" Click="clear2_Click"/>
         <Button x:Name="clear3" Content="X" HorizontalAlignment="Left" Margin="434,373,0,0" VerticalAlignment="Top" Width="23" FontSize="20" FontFamily="Lucida Console" Background="White" Foreground="#FFDD1B1B" BorderBrush="#FF0B0B0B" Click="clear3_Click"/>
-        <Button x:Name="ClearAll" Content="Clear All Measurements" HorizontalAlignment="Left" Margin="171,581,0,0" VerticalAlignment="Top" Width="155" Height="28" Click="ClearAll_Click"/>
+        <Button x:Name="ClearAll" Content="Clear All Measurements" HorizontalAlignment="Left" Margin="171,581,0,0" VerticalAlignment="Top" Width="155" Height="28" Click="ClearAll_Click" Foreground="Red" Background="#FFFFFCFC" FontStyle="Italic" FontSize="14"/>
         <TextBlock x:Name="NextMeasurementIn" HorizontalAlignment="Left" Margin="171,433,0,0" TextWrapping="Wrap" Text="Next Measurement in: " VerticalAlignment="Top" Width="145"  FontSize="14"/>
         <TextBlock x:Name="CounterLabel" HorizontalAlignment="Left" Margin="319,427,0,0" TextWrapping="Wrap" Text="70" VerticalAlignment="Top"  FontSize="20" RenderTransformOrigin="-0.751,0.519" Foreground="#FF118DE5"/>
         <TextBlock x:Name="MinuteDelayPrompt" HorizontalAlignment="Left" Margin="39,462,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="444" Height="50" TextAlignment="Center"><Run Text="Please wait 1 minute before doing the next measurement."/><Run Text=" Bluetooth values will not come through until the minute is over."/></TextBlock>
@@ -45,17 +45,17 @@
         <TextBox x:Name="DIA3_manual" HorizontalAlignment="Left" Height="23" Margin="302,373,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="48"/>
         <TextBox x:Name="PUL3_manual" HorizontalAlignment="Left" Height="23" Margin="369,373,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="48"/>
 
-        <Button x:Name="save1" Width="23" Margin="469,219,13,516" HorizontalAlignment="Stretch" Click="save1_Click" >
+        <Button x:Name="save1" Margin="469,219,0,0" Click="save1_Click" BorderBrush="Black" HorizontalAlignment="Left" Width="23" Height="23" VerticalAlignment="Top" >
             <DockPanel>
                 <Image Source="Images/green_tick.jpg"/>
             </DockPanel>
         </Button>
-        <Button x:Name="save2" Width="23" Margin="469,291,13,443" HorizontalAlignment="Stretch" Click="save2_Click" >
+        <Button x:Name="save2" Width="23" Height="23" Margin="469,292,0,0" HorizontalAlignment="Left" Click="save2_Click" BorderBrush="Black" VerticalAlignment="Top" >
             <DockPanel>
                 <Image Source="Images/green_tick.jpg"/>
             </DockPanel>
         </Button>
-        <Button x:Name="save3" Width="23" Margin="469,373,13,362" HorizontalAlignment="Stretch" Click="save3_Click" >
+        <Button x:Name="save3" Width="23" Margin="469,373,0,0" HorizontalAlignment="Left" Click="save3_Click" BorderBrush="Black" Height="23" VerticalAlignment="Top" >
             <DockPanel>
                 <Image Source="Images/green_tick.jpg"/>
             </DockPanel>
